# doom-nft-program

./: .gitignore  .prettierignore  AGENTS.md  Anchor.toml  Cargo.toml  Makefile  README.md  lefthook.yml  package.json  tsconfig.json
.agents/memory/: todo.md
.cursor/commands/: anchor-build.md  anchor-deploy.md  anchor-test.md  anchor-verify.md  bug-fix.md  check-script.md  check-simirality.md  commit.md  dce.md  final-check.md  linear.md  refactor.md  solana-airdrop.md  solana-balance.md  solana-config.md  solana-keygen.md  understand.md
.cursor/commands/kiro/: spec-design.md  spec-impl.md  spec-init.md  spec-requirements.md  spec-status.md  spec-tasks.md  steering-custom.md  steering.md  validate-design.md  validate-gap.md
.cursor/rules/: anchor.mdc  drawio.mdc  general.mdc  git.mdc  github.mdc  mermaid.mdc  rust.mdc  solana.mdc  test.mdc  typescript.mdc
.github/workflows/: ci.yml
docs/: DOOM_INDEX_NFT_MINT_REQUIREMENTS.md  PRODUCT.md
migrations/: Cargo.toml
migrations/src/: main.rs
programs/doom-nft-program/: Cargo.toml
programs/doom-nft-program/src/: constants.rs  error.rs  events.rs  lib.rs  utils.rs
programs/doom-nft-program/src/instructions/: initialize_collection.rs  initialize_global_config.rs  mint_doom_index_nft.rs  mod.rs  reserve_token_id.rs  set_mint_paused.rs  set_upgrade_authority.rs  transfer_admin.rs  update_base_metadata_url.rs
programs/doom-nft-program/src/state/: global_config.rs  mint_reservation.rs  mod.rs
scripts/: build-test-sbf.sh  test-contract-v1.sh
scripts/devnet/: common.test.ts  common.ts  init.ts  mint.test.ts  mint.ts  reserve.ts
tests/: Cargo.toml
tests/src/: lib.rs  test_context.rs
tests/src/instructions/: mint_doom_index_nft.rs  set_mint_paused.rs  transfer_admin.rs
