[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-lang = "0.31.1"
doom-nft-program = { version = "0.1.0", path = "../programs/doom-nft-program" }
mpl-core = { version = "0.11.1", features = ["anchor"] }
solana-program-test = "2.2.1"
solana-sdk = "2.2.1"
tokio = { version = "1.43.0", features = ["macros"] }
