[package]
name = "doom-nft-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "doom_nft_program"

[features]
default = []
anchor-debug = []
custom-heap = []
custom-panic = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ["cfg(target_os, values(\"solana\"))"] }

[dependencies]
anchor-lang = "0.31.1"
mpl-core = { version = "0.11.1", features = ["anchor"] }
solana-program = "2.2.1"
url = "2.5.4"
